# ux-tabbrowser

./: Makefile.am  README.md  autogen.sh  configure.ac
lib/: Makefile.am  ux-display.c  ux-display.h  ux-graphics.c  ux-graphics.h  ux-parser.c  ux-parser.h  ux-rc.c  ux-rc.h  ux-style.c  ux-style.h  ux-tabbrowser.c  ux-tabbrowser.h
plugins/: Makefile.am  glade-ux.c  glade-ux.h
share/catalogs/: ux.xml
share/themes/Ambiance/gtk-2.0/apps/: ux-tabbrowser.rc
src/: Makefile.am  main.c
